# clion_reversi

./: .gitignore  CMakeLists.txt  main.cpp  makefile
Board/: Board.cpp  Board.h  Position.cpp  Position.h
Game/: ReversiGame.cpp  ReversiGame.h
Logic/: ClassicLogic.cpp  ClassicLogic.h  Logic.cpp  Logic.h
Player/: AIPlayer.cpp  AIPlayer.h  HumanPlayer.cpp  HumanPlayer.h  Player.cpp  Player.h  PlayerColor.h
Printer/: ConsolePrinter.cpp  ConsolePrinter.h  Printer.h
include/: AIPlayer.h  Board.h  ClassicLogic.h  ConsolePrinter.h  HumanPlayer.h  Logic.h  Player.h  PlayerColor.h  Position.h  Printer.h  ReversiGame.h
src/: AIPlayer.cpp  Board.cpp  ClassicLogic.cpp  ConsolePrinter.cpp  HumanPlayer.cpp  Logic.cpp  Player.cpp  Position.cpp  ReversiGame.cpp  main.cpp
test/: AIPlayerTest.cpp  BasicTests.cpp  BoardStates.h  BoardTest.cpp  CMakeLists.txt  ClassicLogicTest.cpp  HumanPlayerTest.cpp  main.cpp
